added comments and updated README